--- a/SIG_kajianislam/app/build.gradle
+++ b/SIG_kajianislam/app/build.gradle
@@ -28,15 +28,15 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    compile 'com.android.volley:volley:1.1.0'
-    compile 'net.gotev:uploadservice:3.4.2'
+    implementation 'com.android.volley:volley:1.1.0'
+    implementation 'net.gotev:uploadservice:3.4.2'
 
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'com.squareup.retrofit2:retrofit:2.0.2'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
+    implementation 'com.google.code.gson:gson:2.6.2'
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
 
     implementation 'com.google.android.gms:play-services:11.8.0'
     implementation 'com.android.support:percent:27.1.1'
 
-    compile 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
+    implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 }
