--- a/SIG_kajianislam/app/src/main/AndroidManifest.xml
+++ b/SIG_kajianislam/app/src/main/AndroidManifest.xml
@@ -55,6 +55,13 @@
             android:theme="@style/AppTheme.NoActionBar">
 
         </activity>
+
+        <activity
+            android:name=".MyKajianActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
