--- a/SIG_kajianislam/app/src/main/AndroidManifest.xml
+++ b/SIG_kajianislam/app/src/main/AndroidManifest.xml
@@ -57,7 +57,13 @@
         </activity>
 
         <activity
-            android:name=".MyKajianActivity"
+        android:name=".MyKajianActivity"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme.NoActionBar">
+
+    </activity>
+        <activity
+            android:name=".DetailPublicActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
