Alarm Calender dan Tanggal Tambah Kajian Error

--- a/SIG_kajianislam/app/src/main/AndroidManifest.xml
+++ b/SIG_kajianislam/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.jekiansari.sig_kajianislam">
 
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +13,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
+        <service android:name=".services.Receiver" android:enabled="true">
+            <intent-filter> <action android:name="NOTIFICATION_SERVICE" /></intent-filter>
+        </service>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/API_KEY" />
@@ -57,7 +63,13 @@
         </activity>
 
         <activity
-            android:name=".MyKajianActivity"
+        android:name=".MyKajianActivity"
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme.NoActionBar">
+
+    </activity>
+        <activity
+            android:name=".DetailPublicActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
 
