--- a/SIG_kajianislam/app/build.gradle
+++ b/SIG_kajianislam/app/build.gradle
@@ -38,5 +38,8 @@ dependencies {
     implementation 'com.google.android.gms:play-services:11.8.0'
     implementation 'com.android.support:percent:27.1.1'
 
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+
     implementation 'org.jbundle.util.osgi.wrapped:org.jbundle.util.osgi.wrapped.org.apache.http.client:4.1.2'
 }
